# scrapify-rust

./: .gitignore  Cargo.toml  README.md
src/: gecko_manager.rs  main.rs  scraper.rs  shop_list.rs
