[package]
name = "scrape-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
fantoccini = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.13"
url = "2.3.1"
scraper = "0.13.0"